修正隱私權聲明,關於會員刪除的部份.#165288886353

--- a/src/PKWeb/myInfo/html/en-us/Privacy.html
+++ b/src/PKWeb/myInfo/html/en-us/Privacy.html
@@ -221,7 +221,11 @@
         </div>
         <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
             <div class="panel-body">
-                <p>With some limited exceptions, you have rights to access and update personal information held about you by sending us a written request by email: <a href="mailto:pk@mail.prokits.com.tw">pk@mail.prokits.com.tw</a>. Please be sure to include your full name and email for ascertaining your identity and whether we have any personal information regarding you.</p>
+                <p>1. In accordance with Article 3 of the Personal Data Protection Act, you have the right upon your personal information for following requests, to view, make copies, correct, adjust, prohibit using against our company, or delete; unless there are other restrictions by law.</p>
+                <p>
+                    2. If you intend to exercise the above rights or other requirements, you can email your request to our official mailbox: pk@mail.prokits.com.tw. Please put your full name & personal details for our corresponding check & providing service. We will get back to you the soonest.
+                </p>
+                <p>3. Our company will accept all your requests as per the above rights. For viewing or making copy requests, we will reply to you in 15 working days. An extra 15 working days for extension is allowed which we will inform you with a formal email notice in advance. For correction, adjustment, prohibition, or deletion requests, we will reply to you in 30 working days. An extra 30 working days for extension is allowed which we will inform you with a formal email notice in advance.</p>
             </div>
         </div>
     </div>
