--- a/src/PKWeb/myInfo/html/zh-cn/Privacy.html
+++ b/src/PKWeb/myInfo/html/zh-cn/Privacy.html
@@ -146,7 +146,9 @@
         </div>
         <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
             <div class="panel-body">
-                <p>除某些特定的特殊情况，您有权申请、更新或删除我们所持有的与您相关的个人信息。如果您想查询我们所持有的与您相关的任何个人信息， 以书信或电子邮件将书面请求寄到<a href="mailto:pk@mail.prokits.com.tw">pk@mail.prokits.com.tw</a>。请务必提交全名、地址 及电子邮件，以便我们查明您的身份并提供服务。</p>
+                <p>1.依个人资料保护法第 3 条规定，除非有其他法令限制，您就您所提供之个人资料享有查询或请求阅览、请求制给复制本、请求补充或更正、请求停止搜集处理或利用(包含撤回同意、反对本公司继续处理您的资料)、请求删除的权利。 </p>
+                <p>2.如果您欲行使上述权利或是有其他咨询、投诉事项，可以书信或电子邮件将书面请求寄到pk@mail.prokits.com.tw。请务必填写全名、地址及email，以便我们查明您的身份并提供服务，我们将尽快回覆您的问题。 </p>
+                <p>3.本公司受理您行使各项个人权利，若为查询或请求阅览、请求制给复制本，本公司将于提出请求之15日内回覆，必要时得再延长15日，本公司将以书面通知您延长原因；若为请求补充或更正、请求停止搜集处理或利用、请求删除，本公司将于提出请求之30日内回覆，必要时得再延长30日，本公司将以书面通知您延长原因。 </p>
             </div>
         </div>
     </div>
