--- a/src/PKWeb/myInfo/html/zh-tw/Privacy.html
+++ b/src/PKWeb/myInfo/html/zh-tw/Privacy.html
@@ -146,7 +146,9 @@
         </div>
         <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
             <div class="panel-body">
-                <p>除某些限定的例外情況，您有權存取、更新或刪除我們所持有的與您相關之個人資訊。若您想要查詢我們所持有的與您相關之任何個人資訊，只要以書信或電子郵件將書面請求寄到<a href="mailto:pk@mail.prokits.com.tw">pk@mail.prokits.com.tw</a>。請務必填寫全名、地址及email，以便我們查明您的身份並提供服務。</p>
+                <p>1.依個人資料保護法第 3 條規定，除非有其他法令限制，您就您所提供之個人資料享有查詢或請求閱覽、請求製給複製本、請求補充或更正、請求停止蒐集處理或利用(包含撤回同意、反對本公司繼續處理您的資料)、請求刪除的權利。</p>
+                <p>2.如果您欲行使上述權利或是有其他諮詢、投訴事項，可以書信或電子郵件將書面請求寄到pk@mail.prokits.com.tw。請務必填寫全名、地址及email，以便我們查明您的身份並提供服務，我們將盡快回覆您的問題。</p>
+                <p>3.本公司受理您行使各項個人權利，若為查詢或請求閱覽、請求製給複製本，本公司將於提出請求之15日內回覆，必要時得再延長15日，本公司將以書面通知您延長原因；若為請求補充或更正、請求停止蒐集處理或利用、請求刪除，本公司將於提出請求之30日內回覆，必要時得再延長30日，本公司將以書面通知您延長原因。</p>
             </div>
         </div>
     </div>
